A responsive login panel has been added and fixed colors visible when hovering over the links, logos, etc.

--- a/CustomerManagementPanel/src/app/footer/footer.component.scss
+++ b/CustomerManagementPanel/src/app/footer/footer.component.scss
@@ -57,7 +57,7 @@ a{
 }
 
 a:hover{
-    color: #000;
+    color:  #FFC312;
     transition: color .5s;
 }
 
