--- a/CustomerManagementPanel/src/app/header/header.component.scss
+++ b/CustomerManagementPanel/src/app/header/header.component.scss
@@ -5,7 +5,7 @@ a{
 }
 
 a:hover{
-    color: rgb(149, 255, 232);
+    color: #FFC312;
 }
 
 .navbar{
@@ -65,7 +65,7 @@ a:hover{
 }
 
 .buttons-in-navbar:hover{
-    color: rgb(149, 255, 232);
+    color: #FFC312;
     transition: .4s color;
 }
 
@@ -98,7 +98,7 @@ a:hover{
 
 .navbar-nav{
     .nav-link:hover{
-      color: rgb(149, 255, 232);
+      color:  #FFC312;
       transition: .4s color;
     }
 }
